[gd_scene load_steps=5 format=3 uid="uid://bbqxtk247b6wv"]

[ext_resource type="PackedScene" uid="uid://cep87dbpwhpf6" path="res://Menus/background.tscn" id="1_c84iv"]
[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_v8b5e"]
[ext_resource type="Theme" uid="uid://b0ej5l3e8y73e" path="res://Resources/PixelTheme.tres" id="2_tybw7"]
[ext_resource type="Texture2D" uid="uid://8ipe1retfqng" path="res://Sprites/gezegenler/station_sprites/istasyonKARAGUNESATOLYESI1_a.png" id="4_wlkmq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8b5e")

[node name="Background" parent="." instance=ExtResource("1_c84iv")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -171.0
offset_right = 75.0
grow_vertical = 0
theme = ExtResource("2_tybw7")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Play Story"
flat = true

[node name="PlaySurvivalButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Play Survival"
flat = true

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Upgrade"
flat = true

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Options"
flat = true

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Credits"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tybw7")
text = "Quit"
flat = true

[node name="karag√ºnes" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.65098)
position = Vector2(659, 334)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_wlkmq")

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlaySurvivalButton" to="." method="_on_play_survival_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
